# legacy-GDMP-Client

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  about.md  conanfile.txt  mod.json
include/: global.hpp  hooks.hpp  include.hpp  main.hpp  multiplayerSimplePlayer.hpp  utility.hpp
include/layer/: MultiplayerLayer.hpp
include/node/: MultiplayerPlayerObject.hpp  MultiplayerSimplePlayer.hpp
src/: dllmain.cpp  dllmain.hpp  global.cpp  global.hpp  hooks.cpp  hooks.hpp  include.hpp  main.cpp  main.hpp  multiplayerSimplePlayer.cpp  packet.proto  utility.cpp  utility.hpp
src/layer/: MultiplayerLayer.cpp
src/node/: MultiplayerPlayerObject.cpp  MultiplayerSimplePlayer.cpp
